syntax = "proto3";

option csharp_namespace = "Common.Grpc";

package userservice;

service GrpcUserService {
  rpc CreateUser (UserCreateRequest) returns (Result_UserReadResponse);
  rpc DeleteUser (UserDeleteRequest) returns (Result_Bool);
}

message UserCreateRequest {
  string email = 1;
  string password_hash = 2;
  string full_name = 3;
}

message UserReadResponse {
  int32 id = 1;
  string email = 2;
  string full_name = 3;
}

message UserDeleteRequest {
  int32 id = 1;
}

message Result_UserReadResponse {
  bool isSuccess = 1;
  Error error = 2;
  UserReadResponse value = 3;
}

message Result_Bool {
  bool isSuccess = 1;
  Error error = 2;
  bool value = 3;
}

message Error {
  string messageKey = 1;
  int32 httpStatus = 2;
  bool isPublic = 3;
}
